Fri Jul 07 14:41:51 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/types.h:

	  Fixed some non-native type problems. Also, made some temporary
	  types (pthread_*) until we actually get to win32/pthread.h at
	  which point, we will correctly define these.

Fri Jul  7 02:18:02 2000  John Heitmann  <jwh1@cs.wustl.edu>

	* pace/posix/dirent.*:
	* pace/posix/pthread.*:
	* pace/posix/sched.h:
	* pace/posix/signal.*:
	* pace/posix/stat.*:
	* pace/posix/time.*:
	* pace/posix/utsname.inl:
	  Fixed a problem with certain typedefs not being
	  exposed in other .inl files due to an odd
	  interaction of the #pragma once style protections
	  present in the header files. A few structs were redefined
	  a second time outside of their header file.

	  Also, pace_stat was changed to pace_stat_s to avoid a conflict
	  witht the pace_stat() function.

        * pace/win32/termios.*:
        * pace/win32/wait.h:
        * pace/win32/utsname.*:
        * pace/win32/times.*:
        * pace/win32/stat.*:
        * pace/win32/mman.*:
	  Added changes made to /posix earlier.


Thu Jul  6 13:04:02 2000  Joe Hoffert  <joeh@cs.wustl.edu>

        * tests/Posix_SP_Test.c:
          Made tests more robust checking for all possible parameter
          values. Also, changed check for failure. Just because a
          function doesn't support a particular parameter value, does
          not mean the function doesn't support that function. If
          the PACE symbols can be used (i.e., the code compiles) then
          the function is supported.

Thu Jul 06 12:17:21 2000  David L. Levine  <levine@cs.wustl.edu>

        * pace/posix/pthread.inl (pace_pthread_mutex_{get,set}prioceiling):
          LynxOS does not have pthread_mutex_{get,set}prioceiling, so
          don't call them with PACE_LYNXOS.

Wed Jul 5 13:38:11 2000 John Heitmann <jwh1@cs.wustl.edu>

        * pace/types.h:
          Added #include <pthread.h> to expose types on LynxOS.

        * pace/time.inl: